--- a/package.json
+++ b/package.json
@@ -9,9 +9,24 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@metamask/eth-sig-util": "^7.0.1",
+    "@mysten/sui.js": "^0.47.0",
+    "@mysten/zklogin": "^0.3.8",
+    "@zk-kit/incremental-merkle-tree": "^1.1.0",
+    "bigint-buffer": "^1.1.5",
+    "circomlib": "^2.0.5",
+    "circomlibjs": "^0.1.7",
+    "ethers": "^6.9.0",
+    "fs": "^0.0.1-security",
+    "lottie-web": "^5.12.2",
+    "next": "14.0.3",
     "react": "^18",
     "react-dom": "^18",
-    "next": "14.0.3"
+    "react-icons": "^4.12.0",
+    "ts-pattern": "^5.0.5",
+    "typed-rpc": "^4.1.0",
+    "usehooks-ts": "^2.9.1",
+    "zustand": "^4.4.7"
   },
   "devDependencies": {
     "typescript": "^5",
