--- a/Makefile.toml
+++ b/Makefile.toml
@@ -12,3 +12,24 @@ npm run dev
 script = '''
 npm run build
 '''
+
+[tasks."build:circuit"]
+script = '''
+cd circuits
+circom zkVerifiableCredentialsDBCore.circom --r1cs --wasm --sym -o build
+'''
+
+[tasks."download:ptau"]
+scripts = '''
+cd circuits/ptau
+curl -O https://hermez.s3-eu-west-1.amazonaws.com/powersOfTau28_hez_final_13.ptau
+'''
+
+[tasks."create:zkey"]
+scripts = '''
+cd circuits
+snarkjs r1cs info build/zkVerifiableCredentialsDBCore.r1cs
+snarkjs groth16 setup build/zkVerifiableCredentialsDBCore.r1cs ptau/powersOfTau28_hez_final_13.ptau zkey/circuit_0000.zkey
+snarkjs zkey contribute zkey/circuit_0000.zkey zkey/circuit_final.zkey --name="1st Contributor Name" -v -e="random text"
+snarkjs zkey export verificationkey zkey/circuit_final.zkey verificationkey/verification_key.json
+'''
