--- a/package.json
+++ b/package.json
@@ -6,37 +6,63 @@
     "dev": "next dev",
     "build": "next build",
     "start": "next start",
-    "lint": "next lint"
+    "lint": "next lint",
+    "verifier": "hardhat run --network goerli scripts/deploy.ts"
   },
   "dependencies": {
-    "@metamask/eth-sig-util": "^7.0.1",
+    "@metamask/detect-provider": "^1.2.0",
+    "@metamask/eth-sig-util": "^4.0.1",
     "@mysten/sui.js": "^0.47.0",
     "@mysten/zklogin": "^0.3.8",
-    "@zk-kit/incremental-merkle-tree": "^1.1.0",
+    "@zk-kit/incremental-merkle-tree": "^0.4.3",
+    "@zk-kit/incremental-merkle-tree.sol": "^1.2.0",
+    "big-integer": "^1.6.52",
     "bigint-buffer": "^1.1.5",
     "circomlib": "^2.0.5",
-    "circomlibjs": "^0.1.7",
-    "ethers": "^6.9.0",
+    "circomlibjs": "0.0.8",
+    "dotenv": "^16.3.1",
+    "ethers": "^5.4.7",
     "fs": "^0.0.1-security",
+    "hardhat": "^2.10.1",
     "lottie-web": "^5.12.2",
     "next": "14.0.3",
     "react": "^18",
     "react-dom": "^18",
     "react-icons": "^4.12.0",
+    "snarkjs": "^0.7.2",
     "ts-pattern": "^5.0.5",
     "typed-rpc": "^4.1.0",
     "usehooks-ts": "^2.9.1",
     "zustand": "^4.4.7"
   },
   "devDependencies": {
-    "typescript": "^5",
+    "@ethersproject/abi": "^5.4.7",
+    "@ethersproject/providers": "^5.4.7",
+    "@nomicfoundation/hardhat-chai-matchers": "^1.0.0",
+    "@nomicfoundation/hardhat-network-helpers": "^1.0.0",
+    "@nomicfoundation/hardhat-toolbox": "^1.0.2",
+    "@nomiclabs/hardhat-ethers": "^2.0.0",
+    "@nomiclabs/hardhat-etherscan": "^3.0.0",
+    "@openzeppelin/contracts": "^4.9.3",
+    "@typechain/ethers-v5": "^10.1.0",
+    "@typechain/hardhat": "^6.1.2",
+    "@types/chai": "^4.2.0",
+    "@types/circomlibjs": "0.1.6",
     "@types/node": "^20",
     "@types/react": "^18",
     "@types/react-dom": "^18",
     "autoprefixer": "^10.0.1",
-    "postcss": "^8",
-    "tailwindcss": "^3.3.0",
     "eslint": "^8",
-    "eslint-config-next": "14.0.3"
+    "eslint-config-next": "14.0.3",
+    "ethers": "^5.4.7",
+    "hardhat": "^2.10.1",
+    "hardhat-gas-reporter": "^1.0.8",
+    "postcss": "^8",
+    "solidity-coverage": "^0.7.21",
+    "surge": "^0.23.1",
+    "tailwindcss": "^3.3.0",
+    "ts-node": "^10.9.1",
+    "typechain": "^8.1.0",
+    "typescript": "^5"
   }
 }
