--- a/package.json
+++ b/package.json
@@ -10,10 +10,12 @@
     "verifier": "hardhat run --network goerli scripts/deploy.ts"
   },
   "dependencies": {
+    "@manahippo/aptos-wallet-adapter": "^1.0.10",
     "@metamask/detect-provider": "^1.2.0",
     "@metamask/eth-sig-util": "^4.0.1",
     "@mysten/sui.js": "^0.47.0",
     "@mysten/zklogin": "^0.3.8",
+    "@suiet/wallet-kit": "^0.2.22",
     "@zk-kit/incremental-merkle-tree": "^0.4.3",
     "@zk-kit/incremental-merkle-tree.sol": "^1.2.0",
     "big-integer": "^1.6.52",
