--- a/Makefile.toml
+++ b/Makefile.toml
@@ -13,6 +13,12 @@ script = '''
 npm run build
 '''
 
+[tasks."run:flask"]
+script = '''
+cd backend/src
+python3 main.py
+'''
+
 [tasks."build:circuit"]
 script = '''
 cd circuits
